# HTMLTag_Parser

HTMLTag_Parser/: Album.cpp  Album.hpp  AlbumImage.cpp  AlbumImage.hpp  Albums.cpp  Albums.hpp  AlbumsImage.cpp  AlbumsImage.hpp  Artist.cpp  Artist.hpp  ArtistImage.cpp  ArtistImage.hpp  Artists.cpp  Artists.hpp  ArtistsImage.cpp  ArtistsImage.hpp  CMakeLists.txt  JSONArray.cpp  JSONArray.hpp  JSONDataObject.cpp  JSONDataObject.hpp  JSONToken.cpp  JSONToken.hpp  JSONTokenizer.cpp  JSONTokenizer.hpp  Pair.cpp  Pair.hpp  README.txt  Track.cpp  Track.hpp  Tracks.cpp  Tracks.hpp  main.cpp
HTMLTag_Parser/InputFiles/: album_images_human_readable.json  artist_images_human_readable.json  master.html
